--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_screenutil: ^5.6.1
   kakao_flutter_sdk_talk: ^1.4.0
   kakao_flutter_sdk_user: ^1.4.0
+  flutter_secure_storage: ^7.0.1
 
 dev_dependencies:
   flutter_test:
