--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   kakao_flutter_sdk_talk: ^1.4.0
   kakao_flutter_sdk_user: ^1.4.0
   flutter_secure_storage: ^7.0.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
